Ch 10 - Solved performance issue. It was the strokes for the dots! As a result I changed the colors I use for my gradient to be a little more contrast-y.

--- a/10-marginal-histogram/styles.css
+++ b/10-marginal-histogram/styles.css
@@ -56,6 +56,12 @@ circle {
     fill: cornflowerblue;
 }
 
+/* Performance killer. :( */
+/* .dot {
+    stroke: black;
+    stroke-opacity: 20%;
+} */
+
 .bounds-background {
     fill: white;    /* Rects use fill, not color or background. */
 }
